syntax = "proto3";
package realionetwork.asset.v1;

option go_package = "github.com/realiotech/realio-network/x/asset/types";

import "gogoproto/gogo.proto";

// Msg defines the Msg service.
service Msg {

  rpc CreateToken(MsgCreateToken) returns (MsgCreateTokenResponse);
  rpc UpdateToken(MsgUpdateToken) returns (MsgUpdateTokenResponse);
  rpc AuthorizeAddress(MsgAuthorizeAddress)
      returns (MsgAuthorizeAddressResponse);
  rpc UnAuthorizeAddress(MsgUnAuthorizeAddress)
      returns (MsgUnAuthorizeAddressResponse);
  rpc TransferToken(MsgTransferToken) returns (MsgTransferTokenResponse);
  // this line is used by starport scaffolding # proto/tx/rpc
}

message MsgCreateToken {
  string manager = 1;
  string name = 2;
  string symbol = 3;
  string total = 4;
  bool authorizationRequired = 6;
}

message MsgCreateTokenResponse {}

message MsgUpdateToken {
  string manager = 1;
  string symbol = 2;
  bool authorizationRequired = 3;
}

message MsgUpdateTokenResponse {}

message MsgAuthorizeAddress {
  string manager = 1;
  string symbol = 2;
  string address = 3;
}

message MsgAuthorizeAddressResponse {}

message MsgUnAuthorizeAddress {
  string manager = 1;
  string symbol = 2;
  string address = 3;
}

message MsgUnAuthorizeAddressResponse {}

message MsgTransferToken {
  string symbol = 1;
  string from = 2;
  string to = 3;
  string amount = 4;
}

message MsgTransferTokenResponse {}

// this line is used by starport scaffolding # proto/tx/message